fixed login + dark mode + popup stuff

--- a/css/elements/login_popup.css
+++ b/css/elements/login_popup.css
@@ -1,17 +1,24 @@
 @import "elements/vars.css";
 
+@font-face {
+  font-family: legible-font;
+  src: url('fonts/AtkinsonHyperlegible-Bold.ttf');
+}
+
 #loginSignupForm {
     display: flex;
     flex-direction: column;
   }
   
   label {
+    color: var(--color-light);
+    font: legible-font;
     margin-bottom: 5px;
   }
-  
+
   input[type="email"],
   input[type="password"] {
-    background-color: #E7E7E7;
+    background-color: var(--background-light);
     padding: 10px;
     border-radius: 20px;
     border: 0px solid #ccc;
@@ -22,8 +29,16 @@
   
   input[type="email"]:focus,
   input[type="password"]:focus {
+    color: var(--color-light);
     outline: none;
-    border-color: #E7E7E7;
+    border-color: var(--background-light);
+    box-shadow: var(--switch-shadow-light);
+  }
+
+  input[type="email"]:hover,
+  input[type="password"]:hover {
+    outline: none;
+    border-color: var(--background-light);
     box-shadow: var(--button-shadow-light);
   }
 
