--- a/css/elements/theme_mode_switch.css
+++ b/css/elements/theme_mode_switch.css
@@ -1,8 +1,8 @@
 @import "vars.css";
 
 .switch-container {
-  margin: 10px;
-  margin-top: 8px;
+  margin: auto;
+  margin-right: 10px;
   flex: 1;
   max-width: 72px;
   height: 36px;
